# firedancer

./: download_incremental.sh  mainnet.py
book/guide/: initializing.md
config/extra/: with-optimization.mk
contrib/create-ledgers/: Cargo.toml
contrib/create-ledgers/src/: main.rs
contrib/test/: run_test_vectors.sh  setup_fd_cluster.sh  test_firedancer_leader.sh  test_firedancer_testnet.sh
src/app/fdctl/: fdctl.h  main.c
src/app/fdctl/config/: default.toml
src/app/fdctl/run/: run.c
src/app/fdctl/run/tiles/: fd_gossip.c  fd_poh_int.c  fd_quic.c  fd_replay.c  fd_shred.c  fd_store_int.c
src/app/fdctl/run/topos/: fd_firedancer.c
src/app/fddev/: Local.mk  dev.c  main1.c
src/app/fddev/configure/: devsysctl.c
src/app/ledger/: main.c
src/ballet/sbpf/: fd_sbpf_loader.c  fd_sbpf_loader.h  test_sbpf_loader.c
src/disco/consensus/: test_consensus.c  test_gossip_echo_vote.c
src/disco/poh/: fd_poh_tile.c
src/disco/topo/: fd_topob.c
src/disco/tvu/: fd_tvu.c
src/flamenco/gossip/: fd_gossip.h
src/flamenco/runtime/: fd_acc_mgr.c  fd_acc_mgr.h  fd_runtime.c
src/flamenco/runtime/program/: fd_bpf_loader_v2_program.c  fd_bpf_loader_v3_program.c  fd_bpf_program_util.c  fd_stake_program.c
src/flamenco/runtime/tests/: Local.mk  fd_exec_instr_test.c  fd_exec_test.pb.h  fd_exec_test.proto
