[package]
name = "create-ledgers"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
solana-sdk = { version = "1.18.15", features = ["dev-context-only-utils"] }
solana-bpf-loader-program ={ version = "1.18.15"}
solana-program-runtime ={ version = "1.18.15"}
solana_rbpf = { version = "0.8.0"}
solana-client = { version = "1.18.15"}
solana-cli ={ version = "1.18.15"}
